--- a/DevOpsDashboard.Model/DevOpsDashboard.Model.csproj
+++ b/DevOpsDashboard.Model/DevOpsDashboard.Model.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,11 +44,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DashboadMessageBase.cs" />
-    <Compile Include="DashboadMessageCategory.cs" />
     <Compile Include="DashboardMessageGeneric.cs" />
     <Compile Include="DashboardMessageVSTS.cs" />
     <Compile Include="DashboardMessageGitHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
