Prepared test for GitHub push event

--- a/DevOpsDashboard.ModelTests/DevOpsDashboard.ModelTests.csproj
+++ b/DevOpsDashboard.ModelTests/DevOpsDashboard.ModelTests.csproj
@@ -57,6 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="DashboardMessageGenericTests.cs" />
+    <Compile Include="DashboardMessageGitHubTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
