--- a/DevOpsDashboard.Model/DevOpsDashboard.Model.csproj
+++ b/DevOpsDashboard.Model/DevOpsDashboard.Model.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DashboadMessageBase.cs" />
+    <Compile Include="DashboardMessageBase.cs" />
     <Compile Include="DashboardMessageGeneric.cs" />
     <Compile Include="DashboardMessageVSTS.cs" />
     <Compile Include="DashboardMessageGitHub.cs" />
