--- a/DevOpsDashboard.Web/DevOpsDashboard.Web.csproj
+++ b/DevOpsDashboard.Web/DevOpsDashboard.Web.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Hubs\DashboardMessageHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
