--- a/DevOpsDashboard.Web/DevOpsDashboard.Web.csproj
+++ b/DevOpsDashboard.Web/DevOpsDashboard.Web.csproj
@@ -204,6 +204,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\API\WebHookVSTSController.cs" />
     <Compile Include="Controllers\API\WebHookGitHubController.cs" />
     <Compile Include="Controllers\API\WebHookGenericController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
